# chat

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp  client.h  main.cpp
client/include/chat/: client.h
server/: CMakeLists.txt  main.cpp  server.cpp  server.h  session.cpp  session.h  sessionManager.cpp  sessionManager.h
server/include/chat/: server.h
server/src/: server.cpp  server_impl.cpp  server_impl.h  session.cpp  session.h  sessionManager.cpp  sessionManager.h
